SonarQube recommendations applied